--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Iot Revolucionário</title>
-
-    <style>
-
-        h1{
-            font-family: Arial; 
-            color: orangered; 
-            font-weight: 500;
-        }
-
-    </style>
+    <title>Home</title>
+    <link rel="stylesheet" href="estilo.css">
 
 </head>
+<p class="testes ee"></p>
 
 <body>
 
-    <h1>Projeto Iot Revolucionário</h1>
+    <h1 class="titulo">AquaTec</h1>
 
-    <p>Sou um texto em um paragrafo</p>
+    <h2 class="subtitulo">Um novo projeto de PI</h2>
+
+    <p class="paragrafo">Sou um <span class="destaque">parágrafo</span>!!!</p>
+
+    <div id="box"></div>
 
 </body>
 
