--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Login</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 
@@ -18,17 +18,17 @@
             <h1 class="titulo">AcquaTec</h1>
 
             <ul class="navBar">
-                <li class="aqui">
+                <li>
                     <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="#">Simulador</a>
                 </li>
-                <li>
+                <li class="aqui">
                     <a href="login.html">Login</a>
                 </li>
                 <li>
-                    <a href="#">Cadastro</a>
+                    <a href="cadastro.html">Cadastro</a>
                 </li>
             </ul>
         </div>
@@ -40,40 +40,30 @@
 
     <div class="banner">
         <div class="container">
-            <p>Preservando <span>hoje</span> para existirem <span>amanhã</span></p>
+            <div class="card-l">
+                <div class="card_t">
+                    <h1>Olá, seja bem vindo</h1>
+
+                    <h4>E-mail:</h4>
+                    <input type="text" placeholder="seuemail@gmail.com">
+
+                    <h4>Senha:</h4>
+                    <input type="password" placeholder="*******">
+
+                    <a href="cadastro.html">Fazer cadastro</a>
+
+                    <button>Entrar</button>
+                </div>
+            </div>
         </div>
     </div>
 
     <!-- Fim do Banner -->
 
-    <!-- Começo do Social -->
 
-    <div class="social">
-        <div class="container">
-            <div class="boxes">
-                <div class="box">
-                    <img src="imgs/planet-earth_color.png">
-                    <h4>Missão</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                </div>
-                <div class="box">
-                    <img src="imgs/lightbulb_color.png">
-                    <h4>Missão</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                </div>
-                <div class="box">
-                    <img src="imgs/growth_color.png">
-                    <h4>Missão</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-    <!-- Fim do Social -->
 
     <!-- Começo do Footer -->
-    
+
     <div class="footer">
         <div class="container">
             <p>
