--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 
@@ -24,11 +24,11 @@
                 <li>
                     <a href="#">Simulador</a>
                 </li>
-                <li class="aqui">
+                <li>
                     <a href="login.html">Login</a>
                 </li>
-                <li>
-                    <a href="#">Cadastro</a>
+                <li class="aqui">
+                    <a href="cadastro.html">Cadastro</a>
                 </li>
             </ul>
         </div>
@@ -40,16 +40,30 @@
 
     <div class="banner">
         <div class="container">
-            <div class="card">
-                <h1>Olá, seja bem vindo</h1>
-                
-                <h4>E-mail:</h4>
-                <input type="text" placeholder="seuemail@gmail.com">
+            <div class="card_c">
+                <div class="card_t">
+                    <h1>Cadastro</h1>
 
-                <h4>Senha:</h4>
-                <input type="text" placeholder="*******">
+                    <div class="separacao">
+                        <div class="left">
+                            <h4>Digite seu nome:</h4>
+                            <input type="text">
 
-                <button>Entrar</button>
+                            <h4>Digite seu e-mail:</h4>
+                            <input type="text" placeholder="seuemail@gmail.com">
+                        </div>
+
+                        <div class="right">
+                            <h4>Digite seu número:</h4>
+                            <input type="text" placeholder="9 9999-9999">
+
+                            <h4>Digite uma senha:</h4>
+                            <input type="password" placeholder="******">
+                        </div>
+                    </div>
+
+                    <button>Confirmar</button>
+                </div>
             </div>
         </div>
     </div>
