--- a/index.html
+++ b/index.html
@@ -7,19 +7,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="estilo.css">
-
 </head>
-<p class="testes ee"></p>
 
 <body>
 
-    <h1 class="titulo">AquaTec</h1>
+    <!-- Começo do Cabeçalho -->
 
-    <h2 class="subtitulo">Um novo projeto de PI</h2>
+    <div class="header">
+        <div class="container">
+            <h1 class="titulo">AcquaTec</h1>
 
-    <p class="paragrafo">Sou um <span class="destaque">parágrafo</span>!!!</p>
+            <ul class="navBar">
+                <li class="aqui">
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Simulador</a>
+                </li>
+                <li>
+                    <a href="login.html">Login</a>
+                </li>
+                <li>
+                    <a href="cadastro.html">Cadastro</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
-    <div id="box"></div>
+    <!-- Fim do Cabeçalho -->
+
+    <!-- Começo do Banner -->
+
+    <div class="banner">
+        <div class="container">
+            <p>Preservando <span>hoje</span> para existirem <span>amanhã</span></p>
+        </div>
+    </div>
+
+    <!-- Fim do Banner -->
+
+    <!-- Começo do Social -->
+
+    <div class="social">
+        <div class="container">
+            <div class="boxes">
+                <div class="box">
+                    <img src="imgs/planet-earth_color.png">
+                    <h4>Missão</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                </div>
+                <div class="box">
+                    <img src="imgs/lightbulb_color.png">
+                    <h4>Missão</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                </div>
+                <div class="box">
+                    <img src="imgs/growth_color.png">
+                    <h4>Missão</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Fim do Social -->
+
+    <!-- Começo do Footer -->
+    
+    <div class="footer">
+        <div class="container">
+            <p>
+                Feito com amor por um aluno &hearts; SPTech &copy; 2022
+            </p>
+        </div>
+    </div>
+
+    <!-- Fim do Footer -->
 
 </body>
 
